# ducklake-cdc-python-client

./: .gitignore  README.md  demo.py  main.py  pyproject.toml
_OLD_REF_DONT_TOUCH/clients/python/: README.md  docker-compose.yml  draft.md  pyproject.toml
_OLD_REF_DONT_TOUCH/clients/python/demo/: analytics.py  common.py  constants.py  consumer.py  producer.py  timed_dml_consumer.py
_OLD_REF_DONT_TOUCH/clients/python/demo/.work/demo_data/demo_schema_01/events_01/: ducklake-019df191-79a3-77f3-b3a8-a1f56ae7c243.parquet  ducklake-019df191-7ac9-7163-bd63-a8335d6d63c0.parquet  ducklake-019df191-7b8c-7986-b1a2-5f202152bc36.parquet  ducklake-019df191-7c45-7912-9499-41de0859c99d.parquet  ducklake-019df191-7d02-7e31-ad11-fcb889cd825d.parquet  ducklake-019df191-7dc0-7b28-a2b8-313d5e3fa400.parquet  ducklake-019df191-7e74-7833-92cf-b6d6a1c61beb.parquet  ducklake-019df191-7f26-7438-9128-fbaff908d268.parquet  ducklake-019df191-7fe3-7428-8b01-6822a47ae657.parquet  ducklake-019df191-8098-7c83-aa76-a4acaa14c572.parquet  ducklake-019df191-814c-74d8-af06-17e6d2b13f49.parquet  ducklake-019df191-81fe-7c7c-91ea-351d4ff17a60.parquet  ducklake-019df191-82b4-7873-9970-82e1077f6a1c.parquet  ducklake-019df191-8372-7bf9-b4e0-95cee9723ae5.parquet  ducklake-019df191-842f-7d37-bc50-5d9988adf8b4.parquet  ducklake-019df191-84e2-761c-9552-61c2fb90cc06.parquet  ducklake-019df191-8595-77a3-9393-bd94775dc00a.parquet  ducklake-019df191-8647-7e5a-934c-954bc799d830.parquet  ducklake-019df191-86fa-7d46-9b14-034272a00a0d.parquet  ducklake-019df191-87ad-7291-8eeb-72130598c6ec.parquet  ducklake-019df191-885f-746b-b3db-8d5b4405ccb3.parquet  ducklake-019df191-8911-7ccc-8a35-3a4a47d0f5d5.parquet  ducklake-019df191-89c5-7538-ae83-eae9caf3f3e5.parquet  ducklake-019df191-8a77-7ebe-9a7c-6abc1e394dbb.parquet  ducklake-019df191-8b33-7eb5-8f68-8433069ed3a3.parquet  ducklake-019df191-8be7-798e-bf92-d49fdd9ad86e.parquet  ducklake-019df191-8c99-745c-bf4f-f7f6178a847d.parquet  (+152 more)
_OLD_REF_DONT_TOUCH/clients/python/demo/sinks/: __init__.py  dashboard.py  stats.py
_OLD_REF_DONT_TOUCH/clients/python/pgbouncer/: pgbouncer.ini  userlist.txt
_OLD_REF_DONT_TOUCH/clients/python/src/ducklake/: __init__.py  _attach.py  _connection.py  config.py  exceptions.py  lake.py  result.py  session.py  table.py
_OLD_REF_DONT_TOUCH/clients/python/src/ducklake_cdc/: __init__.py  _version.py  app.py  combinators.py  consumer.py  enums.py  lowlevel.py  spawner.py  sql.py  types.py
_OLD_REF_DONT_TOUCH/clients/python/src/ducklake_cdc/consumers/: __init__.py  base.py  ddl.py  dml.py
_OLD_REF_DONT_TOUCH/clients/python/src/ducklake_cdc/sinks/: __init__.py  _batch.py  _inner.py  _json.py  base.py  callable.py  consumer_spawner.py  fanout.py  file.py  filter.py  map.py  memory.py  stdout.py
_OLD_REF_DONT_TOUCH/clients/python/tests/: test_app.py  test_cdc_sql.py  test_config.py  test_connection.py  test_consumers.py  test_demo_analytics.py  test_demo_common.py  test_demo_consumer.py  test_demo_producer.py  test_import.py  test_lake_table.py  test_lowlevel_ticks.py  test_result.py  test_sinks.py  test_spawner.py
(+568 files in other folders)
