[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ducklake-cdc-client"
version = "0.1.0"
description = "Python client helpers for the ducklake-cdc DuckDB extension"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ducklake-client",
]

[project.optional-dependencies]
arrow = ["pyarrow"]
pandas = ["pandas"]
polars = ["polars", "pyarrow"]

[tool.hatch.build.targets.wheel]
packages = ["src/ducklake_cdc_client"]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["_OLD_REF_DONT_TOUCH"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
