[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ducklake-cdc"
version = "0.0.0"
description = "Python client helpers for the ducklake-cdc DuckDB extension"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "ducklake-cdc contributors" },
]
keywords = ["cdc", "duckdb", "ducklake"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "duckdb==1.5.2",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "pytz>=2026.1.post1",
]

[project.optional-dependencies]
arrow = ["pyarrow"]
pandas = ["pandas"]
polars = ["polars", "pyarrow"]

[project.urls]
Homepage = "https://github.com/ekkuleivonen/ducklake-cdc-extension"
Repository = "https://github.com/ekkuleivonen/ducklake-cdc-extension"
Issues = "https://github.com/ekkuleivonen/ducklake-cdc-extension/issues"

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/ducklake", "src/ducklake_cdc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = ["demo"]
